@@ -18,6 +18,7 @@
 #define _SVID_SOURCE 1 /* For putenv */
 #define _POSIX_SOURCE 1 /* For fileno */
 #define _BSD_SOURCE 1 /* For setreuid */
+#define _DEFAULT_SOURCE 1
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
